<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Tweety Hunting</string>
    <string name="tweet_sufix" translatable="false">#tweetyhunting</string>

    <!-- Google Analytics events -->
    <string name="tracker_tweetingactivity"  translatable="false">TweetingActivity</string>
    <string name="tracker_tweetingactivity_getcat"  translatable="false">Get Cat</string>
    <string name="tracker_tweetingactivity_tweet"  translatable="false">Tweet</string>


    <string name="hint_tweet">The tweet message</string>

    <string name="action_about">About</string>
    <string name="action_tw_logout">Logout from Twitter</string>
    <string name="action_tw_login">Login to Twitter</string>


    <string name="msg_error">Error while getting a new image, try again</string>
    <string name="msg_error_network">No Internet connection</string>
    <string name="msg_error_api">Unable to communicate with thecatapi.com</string>
    <string name="msg_nocat">No cat to tweet!</string>
    <string name="dialog_share">Share image on</string>

    <string name="invalid_credentials">Unable to get a correct autorization from Twitter API. Please re-authorize the app.</string>
    <string name="unknown_error">Unknown error</string>


    <string name="twitter_requestacess">Authorize %1$s to post images on Twitter</string>
    <string name="twitter_requestacess_fail">Failed to authorize this app on your Twitter account</string>
    <string name="twitter_requestacess_fail_accesstoken">Failed to authorize this app on your Twitter account (wrong access token)</string>
    <string name="twitter_logedin">Logged in</string>
    <string name="twitter_logedout">Logged out</string>
    <string name="twitter_sharingimage">Sharing image…</string>
    <string name="twitter_imageshared">Image shared!</string>

    <string name="developed_by">Made with love by</string>
    <string name="about_me">Hugo Gresse https://twitter.com/HugoGresse</string>
    <string name="thanks_to">Thanks to</string>
    <string name="thanks_to_name">Lauriane Anthony and Antoine Rousseau</string>

    <string name="using"  translatable="false">Third-party libraries</string>
    <string-array name="about_libraries"  translatable="false">
        <item>The Cat API by Aden Forshaw http://thecatapi.com/</item>
        <item>Retrofit and Okhttp by Square Up http://square.github.io/retrofit/</item>
        <item>Twitter4j http://twitter4j.org</item>
        <item tools:ignore="TypographyDashes">Android Gif Drawable by Karol Wrótniak https://github.com/koral--/android-gif-drawable/</item>
        <item>MaterialDesignLibrary by Ivan Navas https://github.com/navasmdc/MaterialDesignLibrary</item>
        <item>Material Edit Text by Kai Zhu https://github.com/rengwuxian/MaterialEditText</item>
    </string-array>
</resources>
